--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/175/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/175/index.mdx
@@ -5,11 +5,11 @@ authors: [slorber]
 date: 02-28-2024
 ---
 
-Hi everyone!
+Salut à tous !
 
-This week has been rather quiet in terms of releases, but we have many great articles to read!
+Cette semaine a été plutôt calme en termes de versions, mais nous avons beaucoup d'articles intéressants à lire !
 
-Sorry for last week, the email was so long that despite removing links, it got truncated by Gmail 😅.
+Désolé pour la semaine dernière, l'email était si long que malgré la suppression des liens, il a été tronqué par Gmail 😅.
 
 <!-- truncate -->
 
@@ -46,7 +46,7 @@ Trusted by corporate clients such as The Weather Channel, Deel.com, La Banque Po
 
 **[Instant Search Params with React Server Components](https://buildui.com/posts/instant-search-params-with-react-server-components)**
 
-An awesome interactive article showing that it’s surprisingly hard to persist UI state to the query string in a React Server Component world and yet give immediate user feedback. Updating the URL triggers a server round-trip. The new `useOptimistic` hook solves this problem nicely. This also shows a nice use-case for CSS `:has()`, to avoid hoisting the `startTransition` pending state.
+Un article interactif génial qui montre qu'il est étonnamment difficile de faire persister l'état de l'interface utilisateur dans la chaîne de requête dans un monde de composants React Server tout en donnant un retour d'information immédiat à l'utilisateur. La mise à jour de l'URL déclenche un aller-retour sur le serveur. Le nouveau hook `useOptimistic` résout joliment ce problème. Cela montre aussi un bon cas d'utilisation du CSS `:has()`, pour éviter de remonter l'état en attente de `startTransition`.
 
 ---
 
@@ -54,7 +54,7 @@ An awesome interactive article showing that it’s surprisingly hard to persist 
 
 **[Building a React Metaframework with Vinxi](https://www.brenelz.com/posts/building-a-react-metaframework-with-vinxi/)**
 
-TIL about [Vinxi](https://vinxi.vercel.app/), a toolbox built on top of Vite and Nitro enabling you to easily create your own meta-framework, with support, SSR, routing conventions, server functions and everything. Solid Start uses it behind the hood, but it’s a framework-agnostic SDK. Apparently, [TanStack Start will use it too](https://twitter.com/sebastienlorber/status/1762809340719780080)! This article explains how to use it with React.
+Aujourd'hui, j'ai découvert [Vinxi](https://vinxi.vercel.app/), une boîte à outils construite au-dessus de Vite et Nitro vous permettant de créer facilement votre propre méta-framework, avec le support SSR, les conventions de routage, les fonctions serveur et tout le reste. Solid Start l'utilise sous le capot, mais c'est un SDK indépendant du framework. Apparemment, [TanStack Start l'utilisera aussi](https://twitter.com/sebastienlorber/status/1762809340719780080) ! Cet article explique comment l'utiliser avec React.
 
 ---
 
@@ -104,7 +104,7 @@ Dive into Clerk's [quickstarts and tutorials](https://clerk.com/docs/quickstarts
 
 ## 📱 React-Native {#react-native}
 
-This section is now co-authored with [Benedikt](https://twitter.com/bndkt). Feel free to send us your comments by email or on [Twitter](https://twitter.com/bndkt)!
+Cette section est désormais co-écrite avec [Benedikt](https://twitter.com/bndkt). N'hésitez pas à nous envoyer vos commentaires par email ou sur [Twitter](https://twitter.com/bndkt) !
 
 This past week, we all enjoyed a brief respite from major headline React Native news (or did I miss something, in this case [@me](https://twitter.com/bndkt)). Perhaps that's a welcome change, especially after the whirlwind of events like Expo 50, visionOS, the State of React Native, react-strict-dom, and more. However, this doesn't mean the React Native world has come to a halt. There’s been a lot of little announcements that give us a glimpse in the near future of React Native. The first release candidates for [RN 0.74](https://github.com/facebook/react-native/blob/ee2bc59dfe4579cad3b7f0b5de667a89fcac8710/CHANGELOG.md#0740-rc0) were released. They contain a lot of improvements as well as some deprecations and breaking changes, but from the first glance nothing major that makes me worried about upgrading effort. Most notably, bridgeless mode becomes the new default with 0.74 (but only when New Arch is enabled). Bridgeless mode is the third pillar of the New Arch, after the already introduced TurboModules and new renderer (Fabric). Speaking of New Arch and defaults, a [PR](https://github.com/facebook/react-native/pull/43135) was merged that’ll make the New Arch the default beginning with RN 0.75 (it will still be possible to opt out though). Also, the RFC with the [React Native Frameworks](https://github.com/react-native-community/discussions-and-proposals/blob/main/proposals/0759-react-native-frameworks.md) definition has been merged, laying out the responsibilities of RN vs frameworks on top of RN.
 
@@ -138,8 +138,8 @@ This past week, we all enjoyed a brief respite from major headline React Native 
 - 🎥 [React Native / Expo et supabase](https://www.youtube.com/watch?v=TDBZ2qM_8S0&list=PLVq2Nd186wZGUFifnViYVVE9xYygILip-)
 - 🎥 [Comment résoudre les Erreurs d'hydratation en Next.js ?](https://www.youtube.com/watch?v=FrLPbHCYMS8)
 - 🎥 [Ces Composants React sont un Game Changer](https://www.youtube.com/watch?v=HmMs19aAK6g)
-- 📅 [Conférence React Paris - 22 Mars](https://react.paris/): nouvelle conférence, les speakers ont déjà été annoncés.
-- 📅 [React Connection - 22 Avril](https://reactconnection.io/) + [React-Native Connection - 23 Avril](https://reactnativeconnection.io/): 2 jours de conférence web et mobile. CFP est ouvert jusqu'au 3 février.
+- 📅 [Conférence React Paris - 22 Mars](https://react.paris/) : nouvelle conférence, les speakers ont déjà été annoncés.
+- 📅 [React Connection - 22 Avril](https://reactconnection.io/) + [React-Native Connection - 23 Avril](https://reactnativeconnection.io/) : 2 jours de conférence web et mobile. CFP est ouvert jusqu'au 3 février.
 
 ---
 
