--- a/website/newsletter/176/index.mdx
+++ b/website/newsletter/176/index.mdx
@@ -1,6 +1,6 @@
 ---
 slug: /176
-title: "This Week In React #176: ..."
+title: "This Week In React #176: useActionState, React Compiler, Million Lint, TanStack, Generative UI, Vinxi, Remix i18n, Next.js security, Typesafe Router, Shopify RN perf, RCTRootViewFactory, iOS Live Activities, Uni Stack, TypeScript, Parcel..."
 authors: [slorber]
 date: 03-06-2024
 unlisted: true
@@ -8,7 +8,9 @@ unlisted: true
 
 Hi everyone!
 
-<Todo />
+This week is difficult to sum up, there's a lot of interesting news and I don't know which to highlight.
+
+We notably have a sneak peek of a new React core hook replacing the confusing `useFormState`, that even React Native devs will now be able to use now!
 
 <!-- truncate -->
 
